# HDSketch

./: CMakeLists.txt
include/BehavioralHD/: ModelHD.hh  RandomModelHD.hh
include/CountMinSketch/: CountMinSketch.hh  ModuloCountMinSketch.hh  MurmurCountMinSketch.hh
include/HDSketch/: HDSketch.hh  HDSketchAVX512.hh  HV32.hh
include/utils/: MurmurHash.hh  fasta.hh  utils.hh
src/HDTest/: dot-test.cc
src/benchmarks/: benchmark.cc
src/utils/: MurmurHash.cc  fasta.cc  utils.cc
